--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3-format": "^1.2.2",
     "d3-geo": "^1.10.0",
     "d3-scale": "^2.0.0",
+    "d3-zoom": "^1.7.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
