--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
+    "react-tooltip": "^3.5.1",
     "styled-components": "^3.2.6",
     "topojson-client": "^3.0.0"
   },
