--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chroma-js": "^1.3.7",
+    "d3-dsv": "^1.0.8",
     "d3-format": "^1.2.2",
     "d3-geo": "^1.10.0",
     "d3-scale": "^2.0.0",
