--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "chroma-js": "^1.3.7",
-    "d3-dsv": "^1.0.8",
-    "d3-format": "^1.3.0",
-    "d3-geo": "^1.10.0",
-    "d3-scale": "^2.0.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
-    "react-tooltip": "^3.5.1",
-    "styled-components": "^3.2.6",
-    "topojson-client": "^3.0.0"
+    "chroma-js": "^2.1.0",
+    "d3-dsv": "^1.2.0",
+    "d3-format": "^1.4.2",
+    "d3-geo": "^1.11.9",
+    "d3-scale": "^3.2.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0",
+    "react-tooltip": "^3.11.1",
+    "styled-components": "^4.4.1",
+    "topojson-client": "^3.1.0"
   },
   "scripts": {
     "start": "concurrently -c \"magenta,cyan\" --names \"Data,React\" \"npm run watch-data\" \"react-scripts start\"",
@@ -27,13 +27,25 @@
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "concurrently": "^3.5.1",
-    "eslint": "^4.10.0",
-    "eslint-config-prettier": "^2.9.0",
+    "babel-eslint": "^10.0.3",
+    "concurrently": "^5.0.1",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-config-react": "^1.1.7",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.4.0",
-    "prettier": "^1.12.0"
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
+    "prettier": "^1.19.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
